# sharestats-leo-notfork

./: .gitignore  .mockenv  .pre-commit-config.yaml  README.md  alembic_check.sh  filter_requirements.txt  pyproject.toml  requirements.in  requirements.txt  testss.xml
.docker/: postgres-compose.yaml
.github/workflows/: tests.yml
.terraform/: rds.tf
alembic/versions/: 4a908d10b459_update_non_null_of_document_in_works_.py  4d66a5dc782b_create_funder_column.py  5128cc2fe488_remove_fk_in_document_able.py  52101c205c9d_initial_migration.py  529debf3992c_fix_cycle_issue_between_work_and_doc.py  600039d1785e_add_field_in_oddpub_is_nullable.py  73817166f499_add_miss_columns.py  74f7f1590fb6_create_rtransparentpublication_tables.py  832c238c1be7_add_oddpub_metrics_table.py  845c59592898_create_rtransparentpublication_workd_id_.py
dsst_etl/: __init__.py  _utils.py  config.py  db.py  hhs_doi.py  logger.py  models.py  oddpub_wrapper.py  upload_pdfs.py  upload_rtransparent_data.py
scripts/: filter_cli.py  hhs_doi_cli.py  ingest_pdfs.py  run_oddpub.py  run_upload_rtransparent_data.py
services/oddpub/: README.md  _entrypoint.sh  app.py  dockerfile  environment.yaml  main.py  pyproject.toml
tests/: test_db_init.py  test_oddpub.py  test_oddpub_wrapper.py  test_pdf_uploader.py  test_upload_rtransparent_data.py
