[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "oddpub-api"
version = "0.1.0"
description = "A FastAPI application for processing PDF files with oddpub functions."
authors = ["Quang Nguyen"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
rpy2 = "^3.5.0"
pandas = "^1.5.0"
numpy = "^1.23.0"
python-multipart = "^0.0.19"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"